log
Thu, Apr 17, 2025  9:14:51 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
eeef3b7
Thu, Apr 17, 2025  9:17:33 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
a6850e6
Thu, Apr 17, 2025  9:17:56 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
b2fdc13
Thu, Apr 17, 2025  9:18:18 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
ff39258
Thu, Apr 17, 2025  9:18:42 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
b747e03
Thu, Apr 17, 2025  9:21:26 PM: 
 tests:  0|0
45d6d13
Thu, Apr 17, 2025  9:22:05 PM: 
b92b4b9
Thu, Apr 17, 2025  9:26:15 PM: 
b935f21
Thu, Apr 17, 2025  9:40:44 PM: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
hashmap.c: In function 'createMap':
hashmap.c:57:5: error: 'map' undeclared (first use in this function)
   57 |     map->buckets = (Pair **) malloc(map->capacity * sizeof(Pair *));
      |     ^~~
hashmap.c:57:5: note: each undeclared identifier is reported only once for each function it appears in
test.c: At top level:
test.c:8:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
d8ffb41
Thu, Apr 17, 2025  9:41:17 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
hashmap.c: In function 'createMap':
hashmap.c:57:37: error: 'map' undeclared (first use in this function)
   57 |     aux->buckets = (Pair **) malloc(map->capacity * sizeof(Pair *));
      |                                     ^~~
hashmap.c:57:37: note: each undeclared identifier is reported only once for each function it appears in
test.c: At top level:
test.c:8:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
9b7cf7e
Thu, Apr 17, 2025  9:42:12 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
8f4c14a
Thu, Apr 17, 2025  9:43:25 PM: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
18da3b8
Thu, Apr 17, 2025  9:43:56 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
dc06bfa
Thu, Apr 17, 2025  9:47:38 PM: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:
hashmap.c: In function 'createMap':
hashmap.c:57:30: error: too few arguments to function 'calloc'
   57 |     aux->buckets = (Pair **) calloc(capacity * sizeof(Pair *));
      |                              ^~~~~~
In file included from test.c:2:
C:/TDM-GCC-64/x86_64-w64-mingw32/include/stdlib.h:529:17: note: declared here
  529 |   void *__cdecl calloc(size_t _NumOfElements,size_t _SizeOfElements);
      |                 ^~~~~~
test.c: At top level:
test.c:8:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
678504d
Thu, Apr 17, 2025  9:48:46 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
6a67d90
Thu, Apr 17, 2025  9:49:40 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
44e85fc
Thu, Apr 17, 2025 11:11:28 PM: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
cace51e
Thu, Apr 17, 2025 11:12:16 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
4992d94
Thu, Apr 17, 2025 11:12:51 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
hashmap.c: In function 'insertMap':
hashmap.c:44:28: error: incompatible types when assigning to type 'Pair' from type 'void *'
   44 |     *(map->buckets)[pos] = value;
      |                            ^~~~~
test.c: At top level:
test.c:8:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
fe380af
Thu, Apr 17, 2025 11:14:02 PM: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
hashmap.c: In function 'insertMap':
hashmap.c:45:28: error: incompatible types when assigning to type 'Pair' from type 'Pair *'
   45 |     *(map->buckets)[pos] = par;
      |                            ^~~
test.c: At top level:
test.c:8:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
adbcac1
Thu, Apr 17, 2025 11:14:24 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
8b8e3a8
Thu, Apr 17, 2025 11:40:39 PM: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
Compilation failed
In file included from test.c:4:
hashmap.c: In function 'insertMap':
hashmap.c:48:22: error: 'capacity' undeclared (first use in this function)
   48 |         while(pos != capacity){
      |                      ^~~~~~~~
hashmap.c:48:22: note: each undeclared identifier is reported only once for each function it appears in
test.c: At top level:
test.c:8:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
0aafc55
Thu, Apr 17, 2025 11:41:15 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
e3bcb35
Fri, Apr 18, 2025 10:02:20 PM: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
ed8c32e
Sat, Apr 19, 2025  9:59:45 PM: 
 hashmap.c | 17 ++++-------------
 1 file changed, 4 insertions(+), 13 deletions(-)
09a7ef2
Sat, Apr 19, 2025 10:03:53 PM: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
333e6f7
Sat, Apr 19, 2025 10:05:43 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
e93aa9c
Sat, Apr 19, 2025 10:12:26 PM: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
4f01ac1
Sat, Apr 19, 2025 10:33:16 PM: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
6d7b2c8
Sat, Apr 19, 2025 10:33:54 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
e52775e
Sat, Apr 19, 2025 10:34:51 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
d63b812
Sat, Apr 19, 2025 10:37:03 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
2363f0a
Sun, Apr 20, 2025 12:36:08 AM: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
285ebd2
Sun, Apr 20, 2025 12:39:13 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
bc11e9a
Sun, Apr 20, 2025  2:05:36 PM: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
61e2504
Sun, Apr 20, 2025  2:06:34 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
2c292ac
Sun, Apr 20, 2025  2:07:36 PM: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
56a71fe
